Fix: overflow on user display name

--- a/pages/guild/Guild.module.css
+++ b/pages/guild/Guild.module.css
@@ -77,6 +77,8 @@
           align-items: center;
           width: max-content;
           max-width: 20dvw;
+          overflow: hidden;
+          text-overflow: ellipsis;
 
           @media (max-width: 768px) {
             max-width: 90dvw;
